# startup-map

./: .gitignore  Cargo.toml  README.md  index.html  scrape_details.py  visualization-a60f0374b8a7c5c2.js  visualization_bg-e05c157627a0e1ef.wasm  yc_company_links.csv
assets/: visualization-1e3a9adbfdf8c0fc.js  visualization-1e3a9adbfdf8c0fc.js.br  visualization-5a3ffe7c4dbe6469.js  visualization-5a3ffe7c4dbe6469.js.br  visualization-c2f80e22b6614af7.js  visualization-c2f80e22b6614af7.js.br  visualization-f046c3a3b411e3ec.js  visualization-f046c3a3b411e3ec.js.br  visualization_bg-1b5e85ad145531d3.wasm  visualization_bg-1b5e85ad145531d3.wasm.br  visualization_bg-207e27df04a953e5.wasm  visualization_bg-207e27df04a953e5.wasm.br  visualization_bg-65e7c6df7ed389ce.wasm  visualization_bg-65e7c6df7ed389ce.wasm.br  visualization_bg-67663a0ca905f1f9.wasm  visualization_bg-67663a0ca905f1f9.wasm.br  visualization_bg-ce79b87c54c8de7f.wasm  visualization_bg-ce79b87c54c8de7f.wasm.br  visualization_bg-e79a271544fbdbcf.wasm  visualization_bg-e79a271544fbdbcf.wasm.br
docs/: index.html  visualization-a60f0374b8a7c5c2.js.br  visualization_bg-e05c157627a0e1ef.wasm.br
docs/assets/: visualization_bg-411351da7c01bada.wasm  visualization_bg-411351da7c01bada.wasm.br
embedding/: Cargo.toml  cached_taglines.txt  startups.csv
embedding/src/: main.rs
public/: index.html
public/assets/: visualization_bg-9157983e5bbdc8f6.wasm  visualization_bg-9157983e5bbdc8f6.wasm.br
scraping/: scrape_links.py
src/: main.rs
visualization/: Cargo.toml  Dioxus.toml
visualization/src/: main.rs
