[package]
name = "startup-map-embedding"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29.1"
csv = "1.3.1"
dotenvy = "0.15.7"
fastembed = "5.0.2"
ndarray = "0.16.1"
pacmap = { version = "0.2.6", features = ["openblas-static"] }
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
